--- a/manuscript/01_introduction.tex
+++ b/manuscript/01_introduction.tex
@@ -5,7 +5,7 @@ As frontier AI systems are pretrained on web-scale data, test set contamination 
 Evaluation aims to measure generalization on tasks the model has never seen, yet the sheer scale of modern pretraining makes such contamination increasingly likely \citep{brown2020language, du2022glam, wei2022finetuned,chowdhery2022palmscalinglanguagemodeling,touvron2023llama2openfoundation}. 
 
 Prior research has sought to quantify the impact of test set contamination, also known as leakage, through two primary lenses. \textit{Statistical approaches} attempt to detect contamination or estimate its influence by modifying the test set, for example, by reordering, rephrasing, or replicating benchmark problems, e.g., \citep{oren2023proving, ni2025trainingbenchmarkneed, shi2024detecting, golchin2023data,golchin2024time,roberts2024to, wang2025generalization, zhang2024carefulexaminationlargelanguage}.
-In comparison, \textit{controlled approaches} -- which offer the most rigorous measurement -- intentionally contaminate pretraining corpora to quantify how specific dosages of leakage inflate performance, e.g., \citep{magar2022data,jiang2024investigatingdatacontaminationpretraining,oren2023proving,yao2024data, wang2025generalization,kocyigit2025overestimation,bordt2025howmuch}.
+In comparison, \textit{controlled approaches} -- which offer the most rigorous measurement -- intentionally contaminate pretraining corpora to quantify how specific doses of leakage inflate performance, e.g., \citep{magar2022data,jiang2024investigatingdatacontaminationpretraining,oren2023proving,yao2024data, wang2025generalization,kocyigit2025overestimation,bordt2025howmuch}.
 For a more thorough discussion, please see Appendix~\ref{app:sec:related_work} Related Work.
 
 \begin{figure*}[t!]
@@ -25,7 +25,7 @@ For a more thorough discussion, please see Appendix~\ref{app:sec:related_work} R
     % \includegraphics[width=\linewidth]{figures/10_math_qwen3_pt_cross_entropy/y=loss_by_num_parameters_by_num_replicas.pdf}
     \includegraphics[width=\linewidth]{figures/10_math_qwen3_pt_cross_entropy/y=loss_ratio_by_num_parameters_by_num_replicas.pdf}
 \end{minipage}
-    \caption{\textbf{Performance on Generative Benchmarks Increases with Test Set Contamination and Model Size.} \text{Schematic:} We pretrained compute-optimal language models ($34$M--$344$M parameters) on corpora containing different replicas of the MATH test set ($0$--$3162$). Evaluation used greedy decoding (temperature $=0$). \textbf{Left:} As contamination (quantified by the number of test set replicas in the pretraining corpus) increases, Math Verify scores (top) rise and cross entropies on the test set (bottom) fall, consistent with discriminative evaluations, with a sharp improvement around $100$. \textbf{Right:} The ratio in the loss on the MATH test set between $R$ replicas and $0$ replicas grows with model size, meaning larger models benefit more from test set contamination for the same number of replicas \citep[larger models memorize more readily;][]{tirumala2022memorization, carlini2023quantifying, biderman2023emergent}.}
+    \caption{\textbf{Performance on Generative Benchmarks Increases with Test Set Contamination and Model Size.} \text{Schematic:} We pretrained compute-optimal language models ($34$M--$344$M parameters) on corpora containing different replicas of the MATH test set ($0$--$3162$). Evaluation used greedy decoding (temperature $=0$). \textbf{Left:} As contamination (quantified by the number of test set replicas in the pretraining corpus) increases, Math Verify scores (top) rise and cross entropies on the test set (bottom) fall, consistent with discriminative evaluations, with a sharp improvement around $100$ test set replicas. \textbf{Right:} The ratio in the loss on the MATH test set between $R$ replicas and $0$ replicas grows with model size, meaning larger models benefit more from test set contamination for the same number of replicas \citep[consistent with results that larger models memorize more readily;][]{tirumala2022memorization, carlini2023quantifying, biderman2023emergent}.}
     \label{fig:math_verify_ce_temp_0}
 \end{figure*}
 
@@ -57,7 +57,7 @@ We make the following contributions:
 \begin{itemize}
     \item \textbf{Pretraining (Scaling \& Irreducible Error):} We quantify how contamination impacts pretrained models. We find that performance increases with the number of test set replicas in the pretraining corpus and with model size, similar to discriminative settings. Under standard scaling law assumptions, we discover that including even a single replica of the test set enables models to achieve a lower loss than the estimated irreducible error of the uncontaminated corpus.
     
-    \item \textbf{Post-Training (Overtraining \& Supervised Finetuning):} We find that training beyond compute-optimal with fresh data dilutes increased performance from contamination, similar to discriminative settings. We then show that SFT on the training data has opposing effects, depending on the amount of contamination in pretraining: performance improves for low contamination, but worsens for high contamination.
+    \item \textbf{More Training (Overtraining \& Supervised Finetuning):} We find that training beyond compute-optimal with fresh data dilutes increased performance from contamination, similar to discriminative settings. We then show that SFT on the training data has opposing effects, depending on the amount of contamination in pretraining: performance improves for low contamination, but worsens for high contamination.
 
     \item \textbf{Inference (Temperature \& Solution Length):} We identify distinct factors that modulate memorization during generation: increasing sampling temperature and increasing solution sequence length each reduce model performance, as models struggle to regurgitate long sequences without decohering.
 
