Updates from Overleaf

--- a/manuscript/03_pretraining.tex
+++ b/manuscript/03_pretraining.tex
@@ -3,7 +3,8 @@
 
 \begin{figure}[t!]
     \centering
-    \includegraphics[width=\columnwidth]{figures/15_math_qwen3_pt_math_verify_rephrase_perturbations/y=math_verify_x=num_replicas_hue=num_params_col=condition_rephrase_perturbed_col_wrap=1.pdf}
+    % \includegraphics[width=\columnwidth]{figures/15_math_qwen3_pt_math_verify_rephrase_perturbations/y=math_verify_x=num_replicas_hue=num_params_col=condition_rephrase_perturbed_col_wrap=1.pdf}
+    \includegraphics[width=\columnwidth]{figures/15_math_qwen3_pt_math_verify_rephrase_perturbations/y=math_verify_x=num_replicas_hue=num_params_col=condition_rephrase_perturbed.pdf}
     \caption{\textbf{Contamination-Driven Performance Is Memorization, Not Generalization.} When MATH test problems are either rephrased (same numbers, different wording) or perturbed (same wording, different numbers), model performance collapses to near-zero regardless of contamination level or model size, confirming that performance gains from contamination rely on verbatim memorization rather than mathematical reasoning.}
     \label{fig:rephrase_perturb}
 \end{figure}
